--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "dev": "nodemon server.js"
   },
   "keywords": [],
+  "engines": {
+    "node": "12.18.3"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "-": "0.0.1",
     "D": "^1.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
+    "helmut": "^1.0.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
